Changes in version 2.5.1
+ In the rmarkdown, replace `message = FALSE` to `message = NA`.

Changes in version 2.1.1
+ add hierarchical consensus partitioning

Changes in version 2.0.1
+ `predict_classes()`: support svm/random forest methods for class label prediction.

Changes in version 1.9.1
+ add `uniquely_high_in_one_group` method in `get_signatures()`.
+ add `compare_partitions()`.
+ parallel computing is implemented with foreach + doParallel

Changes in version 1.9.0
+ use row/column* family functions in `adjust_matrix()` to reduce the memory
  usage as well as improve the speed.

Changes in version 1.5.6
+ function to find best km for kmeans is improved.

Changes in version 1.5.5
+ add `enforce` argument in `get_signatures()`.
+ `subset` can be a vector of indices in `consensus_partition_by_down_sampling()`.

Changes in version 1.5.3
+ `predict_classes()` is speeded up 2x.
+ `get_signatures()`: add `top_signatures` argument to control the number of 
   top signatures.

Changes in version 1.5.2
+ add a `DownSamplingConsensusPartition` class and corresponding methods.
+ add back `HierarchicalPartition` class and corresponding methods.

Changes in version 1.5.1
+ add a `predict_classes()` function.
+ add the cola analysis for Golub dataset as a data object in the package.
+ automatically install the "suggested" packages.

Changes in version 1.3.2
+ add a new vignette introducing functional enrichment.

Changes in version 1.1.2
+ improve documentations.

Changes in version 1.1.1
+ add `GO_enrichment()` and `map_to_entrez_id()`.
+ add `ncol()`/`nrow()`/`colnames()`/`rownames()`/`dim()` helper functions.
+ use `eulerr::euler()` to make the Euler diagram.
+ simplified the rules for deciding the best k.

Changes in version 0.99.15
+ support t-SNE and UMAP.

Changes in version 0.99.14
+ cola_report() supports `mc.cores`.

Changes in version 0.99.13
+ partition functions all support `mc.cores`.

Changes in version 0.99.12
+ implement get_consensus_matrix() by Cpp.