@@ -109,6 +109,7 @@ import(brew)
 import(circlize)
 import(clue)
 import(doParallel)
+import(doRNG)
 import(foreach)
 import(grDevices)
 import(graphics)
